# backend/cmd/main.go
@@ -46,6 +46,7 @@ func main() {
 	// Routes
 	e.GET("/books", handler.GetBooks)
 	e.POST("books", handler.AddBook)
+	e.GET("books/:id", handler.GetBookById)
 
 	// Swagger UI route
 	e.GET("/swagger/*", echoSwagger.EchoWrapHandler())
